src/core-crm/objects/WebCart/fields/Cart_Payment__c.field-meta.xml
<CustomField>
    <fullName>Cart_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart Payment</label>
    <referenceTo>Cart_Payment__c</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <type>Lookup</type>
</CustomField>