src/core-crm/objects/WebCart/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <description>The discount subtracted to the cart total using the coupon</description>
    <label>Discount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>