src/core-crm/objects/WebCart/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice number generated from QUT Pay</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>