src/core-crm/objects/WebCart/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Payment status returned from QUTPay</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled Payment</fullName>
            </value>
            <value>
                <fullName>Validation Failure</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>