src/core-crm/objects/WebCart/fields/Payment_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_ID__c</fullName>
    <description>QUTPay payment transaction ID</description>
    <externalId>true</externalId>
    <label>Payment Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>