src/core-crm/objects/WebCart/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <description>Receipt number generated from QUT Pay</description>
    <label>Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>